--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         </ul>
     </div>
     </header>
+    <div class="part-2">
+        <div class="inner1">
+            <h1 class="main-heading">Human <br> Stories & ideas</h1>
+            <p class="heading-subtext">A place to read, write, and deepen your understanding</p>
+            <button class="start-reading-btn">Start reading</button>
+        </div>
+        
+        <div class="inner2">
+            <img src="image.png" class="img-m" alt="">
+        </div>
+    </div>
+
     
 </body>
 </html>
