--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
         <div class="inner2">
-            <img src="image.png" class="img-m" alt="">
+            <img src="https://miro.medium.com/v2/format:webp/4*SdjkdS98aKH76I8eD0_qjw.png" class="img-m" alt="">
         </div>
     </div>
 
