--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
             <img src="https://miro.medium.com/v2/format:webp/4*SdjkdS98aKH76I8eD0_qjw.png" class="img-m" alt="">
         </div>
     </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <ul class="footer-links">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="footer-rights">
+                <p>© 2024 Medium Clone. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+    
 
     
 </body>
